<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportTransactionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:layoutDirection="rtl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_report"/>

                <Spinner
                    android:id="@+id/transaction_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:paddingTop="15dp"
                android:id="@+id/oneDayLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date_day"/>

                <EditText
                    android:id="@+id/oneDayTxt"
                    android:textDirection="ltr"
                    android:inputType="date"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rangeDateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:paddingTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/from_day"/>

                    <EditText
                        android:id="@+id/fromDayTxt"
                        android:textDirection="ltr"
                        android:inputType="date"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:paddingTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/to_day"/>

                    <EditText
                        android:id="@+id/toDayTxt"
                        android:textDirection="ltr"
                        android:inputType="date"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="150dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_dark"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>